instances/crm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-crm-ingress
  namespace: odoo-crm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: odoo-crm.ces.abssrv.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crm
            port:
              number: 8069
  tls:
  - hosts:
    - odoo-crm.ces.abssrv.it
    secretName: odoo-crm-tls
